today changes index page

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     </div> -->
     <!-- theme settings end -->
 <main>
-  <div class="" style="background-color:  rgb(237, 26, 37);">
-    <header class="container   " style="background-color:  rgb(237, 26, 37);">
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color:  rgb(237, 26, 37);">
+  <div >
+    <header  style="background-color:  rgb(237, 26, 37);">
+      <nav class=" container navbar navbar-expand-lg navbar-light" style="background-color:  rgb(237, 26, 37);">
         <div class="container-fluid">
           <a class="navbar-brand text-light" href="#"><h2>Y Spot</h2></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,20 +87,17 @@
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-light" aria-current="page" href="#"><b>List your property</b></a>
+                <a class="nav-link" href="#"><button type="button" class="btn btn-light text-danger"><b>Register</b></button></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"><button type="button" class="btn btn-light text-danger">Register</button></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="login/index.html"><button type="button" class="btn btn-light text-danger">Sign In</button></a>
+                <a class="nav-link" href="login/index.html"><button type="button" class="btn btn-light text-danger"><b>Sign In</b></button></a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
       
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color:  rgb(237, 26, 37);">
+      <nav class="container navbar navbar-expand-lg navbar-light" style="background-color:  rgb(237, 26, 37);">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 " style="gap: 20px;">
@@ -125,135 +122,134 @@
       </nav>
     </header>
 
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3 " style="background-image: url(./assets/img/hero.jpeg); background-repeat: no-repeat; ">
+    <div class="p-5 mb-4 bg-body-tertiary rounded-3 " style="background-image: url(./assets/img/hero.jpeg); background-repeat: no-repeat; background-color:  rgb(237, 26, 37) ">
       <div class="container py-5">
         <h1 class="display-5 fw-bold  text-light">Pack the whole toybox</h1>
         <p class="col-md-8 fs-4 text-light ">Unwind and stretch out in a vacation home</p>
-        <button type="button" class="btn text-light" style="background-color:  rgb(237, 26, 37);">Discover Vacation Rentals</button>
+        <button type="button" class="btn text-light btn-danger" >Discover Vacation Rentals</button>
       </div>
     </div>
     <div class="container">
       <!-- recent search start -->
-        <div class="recent-search">
-          <h3 class="text-light">Your recent searches</h3>
-        <div class="d-flex p-3 bg-light col-md-4">
-          <div class="flex-shrink-0">
-            <img src="./assets/img/tiruvannamalai.jpg" alt="...">
+        <div class="recent-search pb-3">
+          <h3 class="text-dark">Your recent searches</h3>
+        <div class="d-flex p-3 bg-light col-md-4  rounded-3  shadow ">
+          <div class="flex-shrink-0 ">
+            <img src="./assets/img/tiruvannamalai.jpg" class="rounded-3" alt="...">
           </div>
           <div class="flex-grow-1 ms-3">
-            <h5 class="card-title">Tiruvannamalai</h5>
+            <h6>&nbsp; </h6>
+            <h5 class="card-title"><b>Tiruvannamalai</b></h5>
             <p class="card-text">May 16-May 17,2People</p>
           </div>
         </div>
         </div>
       <!-- recent search end -->
       <!-- offers start -->
-      <h3 class="text-light">Offers</h3>
-      <p class="text-light">Promotions, deals, and special offers for you</p>
-      <div class="row row-cols-1 row-cols-md-2 g-4">
+      <h3 class="text-dark">Offers</h3>
+      <p class="text-dark">Promotions, deals, and special offers for you</p>
+      <div class="row row-cols-1 row-cols-md-2 g-4 pb-3">
         <div class="col">
-          <div class="card mb-3" style="max-width: 540px;">
+          <div class="card" >
             <div class="row g-0">
+              <div class="col-md-4 text-center rounded-3">
+                <img src="./assets/img/offer index/Rectangle 387 (2).png" style="height: 200px;" class="rounded-start img-fluid p-3"  alt="...">
+              </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Fly away to your dream vacation</h5>
-                  <p class="card-text">Get inspired – compare and book flights with flexibility</p>
-                  <p class="card-text"><button type="button" class="btn text-light" style="background-color:  rgb(237, 26, 37);">Explore Brussels</button>
+                  <h5 class="card-title">We have Family-Special Theme Park
+                    Packages for You....</h5>
+                  <p class="card-text">Book with us & enjoy limitless fun this summer.</p>
+                  <p class="card-text"><button type="button" class="btn text-light" style="background-color:  rgb(237, 26, 37);">Explore Now</button>
                   </p>
                 </div>
-              </div>
-              <div class="col-md-4">
-                <img src="./assets/img/flight.png" class="img-fluid rounded-start" alt="...">
               </div>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card mb-3" style="max-width: 540px;">
-            <div class="row g-0">
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">Planning a trip to the 2024 Summer Games?</h5>
-                  <p class="card-text">Brussels is a quick train ride from all the action</p>
-                  <p class="card-text"><button type="button" class="btn text-light" style="background-color:  rgb(237, 26, 37);">Search for Flights</button>
-                  </p>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <img src="./assets/img/garden.png" class="img-fluid rounded-start" alt="...">
-              </div>
+          <div class="card bg-dark text-white">
+            <img src="assets/img/offer index/Rectangle 388.png" style="height: 200px;" class="card-img" alt="...">
+            <div class="card-img-overlay">
+              <h5 class="card-title">Presenting Long Weekend
+                Homestays Mania:</h5>
+              <p class="card-text">Grab up to 30%OFF*on homestays, for wow
+                stays this long weekend </p>
+              <a class="card-text"><button class="btn btn-danger">Book Now</button></a>
             </div>
           </div>
         </div>
       </div>
       <!-- offers end -->
       <!-- trending destinations start  -->
-      <h3 class="text-light">Trending destinations</h3>
-      <p class="text-light">Travelers searching for India also booked these</p>
-      <div class="card-columns">
-        <div class="card">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
+      <style>
+        body {
+    font-family: Arial, sans-serif;
+}
+
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.image-container img {
+    display: block;
+}
+
+.overlay-text {
+    position: absolute;
+    top: 1%;
+    left: 1%;
+    transform: translate(1%, 1%);
+    color: white;
+    /* background-color: rgba(0, 0, 0, 0.5); Optional: to add a background with opacity */
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+      </style>
+      <h3 class="text-dark">Trending destinations</h3>
+      <p class="text-dark">Travelers searching for India also booked these</p>
+      <div class="trending-destinations">
+        <div class="container mt-4">
+        <div class="row">
+            <!-- First row with two images -->
+            <div class="col-md-6">
+              <div class="image-container">
+                <img src="assets/img/tending destinations/Kodaikanal 1.jpg" class="img-fluid pb-2" alt="Image 1">
+                <div class="overlay-text"><b>Kodaikanal</b></div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="image-container">
+                <img src="assets/img/tending destinations/ADIYOGI TEMPLE, COIMBATORE INDIA 1 (1).jpg" class="img-fluid pb-2" alt="Image 1">
+                <div class="overlay-text"><b>Coimbatore</b></div>
+              </div>
+            </div>
         </div>
-        <div class="card p-3">
-          <blockquote class="blockquote mb-0 card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">
-              <small class="text-muted">
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
+        <div class="row mt-4">
+            <!-- Second row with three images -->
+            <div class="col-md-4">
+              <div class="image-container">
+                <img src="assets/img/tending destinations/30 Fascinating Things To Do In Bangalore 2.png" class="img-fluid pb-2" alt="Image 1">
+                <div class="overlay-text"><b>Bangalore</b></div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="image-container">
+                <img src="assets/img/tending destinations/Cochin 3.png" class="img-fluid pb-2" alt="Image 1">
+                <div class="overlay-text"><b>Kerala</b></div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="image-container">
+                <img src="assets/img/tending destinations/THE ROYAL ABODE - MYSORE _ best places to visit in india 2.png" class="img-fluid pb-2" alt="Image 1">
+                <div class="overlay-text"><b>Mysore</b></div>
+              </div>
+            </div>
         </div>
-        <div class="card">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card bg-primary text-white text-center p-3">
-          <blockquote class="blockquote mb-0">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-            <footer class="blockquote-footer">
-              <small>
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
-        </div>
-        <div class="card text-center">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img" src="..." alt="Card image">
-        </div>
-        <div class="card p-3 text-right">
-          <blockquote class="blockquote mb-0">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">
-              <small class="text-muted">
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
-        </div>
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
+    </div>
       <!-- trending destinations end -->
     </div>
 
