--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     <header  style="background-color:  rgb(237, 26, 37);">
       <nav class=" container navbar navbar-expand-lg navbar-light" style="background-color:  rgb(237, 26, 37);">
         <div class="container-fluid">
-          <a class="navbar-brand text-light" href="#"><h2>Y Spot</h2></a>
+          <a class="navbar-brand" href="#" style="margin-left: 100px;">
+            <img src="assets/img/Frame 223.png" alt=""  class="d-inline-block align-text-top">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
