--- a/index.html
+++ b/index.html
@@ -196,51 +196,188 @@
         <!-- explore india start -->
         <h3 class="text-dark">Explore India</h3>
         <p class="text-dark">These popular destinations have lot to offers</p>
-        <div class="image-container text-center">
-          <div class="image-card"><img src="assets/img/explore india/1.png" alt="Image 1"></div>
-          <div class="image-card"><img src="assets/img/explore india/2.png" alt="Image 2"></div>
-          <div class="image-card"><img src="assets/img/explore india/3.png" alt="Image 3"></div>
-          <div class="image-card"><img src="assets/img/explore india/4.png" alt="Image 4"></div>
-          <div class="image-card"><img src="assets/img/explore india/5.png" alt="Image 5"></div>
-          <div class="image-card"><img src="assets/img/explore india/6.png" alt="Image 6"></div>
-          <div class="image-card"><img src="assets/img/explore india/1.png" alt="Image 6"></div>
+        <div class="image-container-wrapper">
+          <div class="image-container1">
+              <div class="image-card"><img src="assets/img/explore india/1.png" alt="Image 1">
+              <p class="p-1"><b>Bangalore </b><br> 3,458 properties</p>
+              </div>
+              <div class="image-card"><img src="assets/img/explore india/2.png" alt="Image 2">
+              <p class="p-1"><b>New delhi </b><br> 2,657 properties</p>
+              </div>
+              <div class="image-card"><img src="assets/img/explore india/3.png" alt="Image 3">
+                <p class="p-1"><b>Kerala </b> <br>3,821 properties</p>
+              </div>
+              <div class="image-card"><img src="assets/img/explore india/4.png" alt="Image 4">
+                <p class="p-1"><b>Mumbai </b> <br>1,523 properties</p>
+              </div>
+              <div class="image-card"><img src="assets/img/explore india/5.png" alt="Image 5">
+                <p class="p-1"><b>Goa </b><br>4,231 properties</p>
+              </div>
+              <div class="image-card"><img src="assets/img/explore india/6.png" alt="Image 6">
+                <p class="p-1"><b>Ooty  </b><br>866 properties</p>
+              </div>
+              <!-- Duplicate the images for seamless looping -->
+              <div class="image-card"><img src="assets/img/explore india/1.png" alt="Image 1">
+                <p class="p-1"><b>Bangalore </b> <br> 3,458 properties</p>
+                </div>
+              <div class="image-card"><img src="assets/img/explore india/2.png" alt="Image 2">
+                <p class="p-1"><b>New delhi </b> <br> 2,657 properties</p>
+                </div>
+              <div class="image-card"><img src="assets/img/explore india/3.png" alt="Image 3">
+                <p class="p-1"><b>Kerala </b> <br>3,821 properties</p>
+              </div>
+              <div class="image-card"><img src="assets/img/explore india/4.png" alt="Image 4">
+                <p class="p-1"><b>Mumbai</b> <br>1,523 properties</p>
+              </div>
+              <div class="image-card"><img src="assets/img/explore india/5.png" alt="Image 5">
+                <p class="p-1"><b>Goa </b> <br>4,231 properties</p>
+              </div>
+              <div class="image-card"><img src="assets/img/explore india/6.png" alt="Image 6">
+                <p class="p-1"><b>Ooty </b> <br>866 properties</p>
+              </div>
+          </div>
       </div>
-      <style>
-        body {
-    margin: 0;
-    padding: 0;
-    background-color: #f0f0f0;
-}
-
-.image-container {
-    display: flex;
-    overflow-x: auto;
-    white-space: nowrap;
-    padding: 10px;
-}
-
-.image-card {
-    flex: 0 0 auto;
-    width: 150px;
-    margin: 0 10px;
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-}
-
-.image-card img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px 8px 0 0;
-}
-
-      </style>
         <!-- explore india end -->
-      </div>
+        <!-- discover your property type start -->
+        <h3 class="text-dark pt-3">Discover Your property type </h3>
+        <div class="container  card-container-wrapper">
+          <div class="container my-3">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-5 g-4">
+                <div class="col p-3">
+                    <div class="card " style="border: none;">
+                        <img src="assets/img/discover your property type/1.png" class="card-img-top" alt="Card Image 1">
+                        <h5 class="card-title text-center p-1">Apartments</h5>
+                    </div>
+                </div>
+                <div class="col p-3">
+                  <div class="card " style="border: none;">
+                    <img src="assets/img/discover your property type/2.png" class="card-img-top" alt="Card Image 1">
+                    <h5 class="card-title text-center  p-1">Hotels</h5>
+                </div>
+                </div>
+                <div class="col p-3">
+                  <div class="card " style="border: none;">
+                    <img src="assets/img/discover your property type/3.png" class="card-img-top" alt="Card Image 1">
+                    <h5 class="card-title text-center  p-1">Villas</h5>
+                </div>
+                </div>
+                <div class="col p-3">
+                  <div class="card " style="border: none;">
+                    <img src="assets/img/discover your property type/4.png" class="card-img-top" alt="Card Image 1">
+                    <h5 class="card-title text-center  p-1">Resorts</h5>
+                </div>
+                </div>
+                <div class="col p-3">
+                  <div class="card " style="border: none;">
+                    <img src="assets/img/discover your property type/5.png" class="card-img-top" alt="Card Image 1">
+                    <h5 class="card-title text-center  p-1">Cabins</h5>
+                </div>
+                </div>
+            </div>
+        </div>
+        <!-- discover your property type end -->
+        <!-- Why Book Hotels with Y.Spot.com? start -->
+        <h1 class="text-center pt-3">Why Book Hotels with Y.Spot.com?</h1>
+        <div class="container my-5">
+          <div class="row justify-content-center align-items-stretch">
+            <div class="col-md-3">
+              <div class="card text-center border-danger align-items-stretch">
+                <img src="assets/img/index page icons footer/Frame 402.jpg" alt="Profile Image" class="card-img-circle">
+                <div class="card-body">
+                  <h5 class="card-title"><b>Convenience and Accessibility</b></h5>
+                  <p class="card-text">24/7 Availability Booking apps allow users to make reservations or appointments at any time, without being restricted to business hours.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-center border-danger align-items-stretch">
+                <img src="assets/img/index page icons footer/Frame 403.jpg" alt="Profile Image" class="card-img-circle">
+                <div class="card-body">
+                  <h5 class="card-title"><b>Time-Saving</b></h5>
+                  <p class="card-text">Instant Confirmation Many booking websites provide instant confirmation of bookings, reducing uncertainty and the need for follow-up communication.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-center border-danger align-items-stretch">
+                <img src="assets/img/index page icons footer/Frame 404.jpg" alt="Profile Image" class="card-img-circle">
+                <div class="card-body">
+                  <h5 class="card-title"><b>Reviews and Ratings</b></h5>
+                  <p class="card-text pb-4">User Reviews Access to reviews and ratings from other customers provides insights into the quality and service of accommodations and travel services.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="card text-center border-danger align-items-stretch">
+                <img src="assets/img/index page icons footer/Frame 405.jpg" alt="Profile Image" class="card-img-circle">
+                <div class="card-body">
+                  <h5 class="card-title"><b>User-Friendly Interfaces</b></h5>
+                  <p class="card-text pb-5 mb-4">Intuitive platforms that simplify the booking process, often with step-by-step guidance.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+            
+        <!-- Why Book Hotels with Y.Spot.com? end -->
+    </div>
   </main>
-  <footer class="  text-body-secondary border-top">
-    <!-- &copy; 2024 -->
-  </footer>
+  <footer class="footer pt-4">
+    <div class="container">
+          <div class="row">
+            <div class="col-md">
+              <h6><b>Help</b></h6>
+              <ul class="list-unstyled">
+                  <li><a href="#" class="text-white textdec small-link">FAQ</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Privacy policy</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Cookies privacy</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Terms of use</a></li>
+                  <li><a href="#" class="text-white textdec small-link">Help centre</a></li>
+              </ul>
+          </div>
+            <div class="col-md">
+                <h6><b>Get the App</b></h6>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white textdec small-link">IOS app</a></li>
+                    <li><a href="#" class="text-white textdec small-link">Android app</a></li>
+                </ul>
+            </div>
+            <div class="col-md">
+                <h6><b>Company</b></h6>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white textdec small-link">About Us</a></li>
+                    <li><a href="#" class="text-white textdec small-link">Blog</a></li>
+                    <li><a href="#" class="text-white textdec small-link">Careers</a></li>
+                    <li><a href="#" class="text-white textdec small-link">PointMAX</a></li>
+                </ul>
+            </div>
+            <div class="col-md">
+                <h6><b>Destination</b></h6>
+                <ul class="list-unstyled">
+                    <li><a href="#" class="text-white textdec small-link">Cities</a></li>
+                    <li><a href="#" class="text-white textdec small-link">Spiritual places </a></li>
+                    <li><a href="#" class="text-white textdec small-link">Hill Stations</a></li>
+                    <li><a href="#" class="text-white textdec small-link">Solo Travel places</a></li>
+                </ul>
+            </div>
+            <div class="col-md">
+                <h6><b>Social Networks</b></h6>
+                <ul class="list-unstyled d-flex p-2">
+                    <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 406.png" alt="Facebook" class="rounded-pill"></a></li>
+                    <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 407.png" alt="Twitter" class="rounded-pill"></a></li>
+                    <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 408.png" alt="Instagram" class="rounded-pill"></a></li>
+                    <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 410.png" alt="Instagram" class="rounded-pill"></a></li>
+                    <li><a href="#"><img src="assets/img/footer social meadia icons/Frame 409.png" alt="Instagram" class="rounded-pill"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="horizantal-line">
+
+    </div>
+    <h6 class="text-end mx-5 pt-3">&copy; 2023 Y.SPOT Rooms pvt .ltd.</h6>
+</footer>
+
   <script src="./assets/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"
     integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous"
