--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <h1 class="text-center pt-3">Why Book Hotels with Y.Spot.com?</h1>
         <div class="container my-5">
           <div class="row justify-content-center align-items-stretch">
-            <div class="col-md-3">
+            <div class="col-md-3 pb-4">
               <div class="card text-center border-danger align-items-stretch">
                 <img src="assets/img/index page icons footer/Frame 402.jpg" alt="Profile Image" class="card-img-circle">
                 <div class="card-body">
@@ -289,7 +289,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 pb-4">
               <div class="card text-center border-danger align-items-stretch">
                 <img src="assets/img/index page icons footer/Frame 403.jpg" alt="Profile Image" class="card-img-circle">
                 <div class="card-body">
@@ -298,7 +298,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 pb-4">
               <div class="card text-center border-danger align-items-stretch">
                 <img src="assets/img/index page icons footer/Frame 404.jpg" alt="Profile Image" class="card-img-circle">
                 <div class="card-body">
@@ -307,7 +307,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 pb-4">
               <div class="card text-center border-danger align-items-stretch">
                 <img src="assets/img/index page icons footer/Frame 405.jpg" alt="Profile Image" class="card-img-circle">
                 <div class="card-body">
