--- a/test.html
+++ b/test.html
@@ -58,7 +58,7 @@
                 <div class="form-row justify-content-center rounded-3"  >
                     <!-- Destination -->
                     <div class="form-group col-lg-3 col-md-6 col-sm-12 ">
-                        <input type="text" class="form-control text-danger" id="location" placeholder="Enter destination" required style="border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);">
+                        <input type="text" class="form-control " id="location" placeholder="Enter destination" required style="border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);">
                     </div>
                     <!-- Check-in and Check-out Dates -->
                     <div class="form-group col-lg-4 col-md-6 col-sm-12">
