--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <header style="background-color:  rgb(237, 26, 37);">
     <nav class=" container navbar navbar-expand-lg navbar-light" style="background-color:  rgb(237, 26, 37);">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" style="margin-left: 100px;">
+        <a class="navbar-brand" href="./index.html" style="margin-left: 100px;">
           <img src="assets/img/Frame 223.png" alt="" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
