--- a/login/index.html
+++ b/login/index.html
@@ -113,7 +113,7 @@
     <header>
       <nav class="navbar  " style="background-color: #FF1717;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#" style="margin-left: 100px;">
+          <a class="navbar-brand" href="../index.html" style="margin-left: 100px;">
             <img src="../assets/img/Frame 223.png" alt=""  class="d-inline-block align-text-top">
           </a>
         </div>
