--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     </div>
                     <!-- Search Button -->
                     <div class="form-group col-lg-2 col-md-6 col-sm-12">
-                        <button type="submit" class="btn text-light " id="search" style="background-color: #FF1717;">Search</button>
+                        <button type="button" class="btn text-light " id="search" style="background-color: #FF1717;" onclick="window.location.href='./details-page/details.html'">Search</button>
                     </div>
                 </div>
             </form>
