--- a/details-page/details.html
+++ b/details-page/details.html
@@ -19,8 +19,8 @@
   <!-- Custom styles for this template -->
   <link href="sign-in.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-  integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-  crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -32,10 +32,12 @@
         <div class="d-flex justify-content-end w-100 px-1">
           <ul class="navbar-nav d-flex flex-row">
             <li class="nav-item  px-3 ">
-              <a class="nav-link" href="#"><button type="button" class="btn btn-light text-danger"><b>Register</b></button></a>
+              <a class="nav-link" href="#"><button type="button"
+                  class="btn btn-light text-danger"><b>Register</b></button></a>
             </li>
             <li class="nav-item  px-3 ">
-              <a class="nav-link" href="login/index.html"><button type="button" class="btn btn-light text-danger"><b>Sign In</b></button></a>
+              <a class="nav-link" href="login/index.html"><button type="button"
+                  class="btn btn-light text-danger"><b>Sign In</b></button></a>
             </li>
           </ul>
         </div>
@@ -47,7 +49,7 @@
         </div>
       </div>
     </nav>
-    
+
     <!-- Second navigation bar: centered content -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FF1717;">
       <div class="container-fluid">
@@ -82,11 +84,13 @@
         </div>
       </div>
     </nav>
-</header>
+  </header>
   <main>
     <!-- brudcrum start -->
     <div class="header-brudcrum container py-3">
-      <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+      <nav
+        style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
+        aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item text-danger" style="list-style: none;">
             <a href="#" style="text-decoration: none; " class="text-danger"><b>Home</b></a>
@@ -102,110 +106,110 @@
     <div class="container mt-3">
       <div class="row">
         <!-- left filter section start  -->
-          <div class="col-md-3 mb-3">
-                <iframe
-                width="256.5px"
-                height= "135px"
-                    frameborder="0" style="border:0"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345094875!2d144.95373631531686!3d-37.81627937975198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf5776cf2b9a4df03!2sFederation%20Square!5e0!3m2!1sen!2sau!4v1616124483413!5m2!1sen!2sau"
-                    allowfullscreen=""
-                    aria-hidden="false"
-                    tabindex="0">
-                </iframe>
-                <!-- category filter start  -->
-                <div class="card my-3">
-                  <div class="card-header">
-                    Categories
-                  </div>
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                      <input class="form-check-input me-1" type="checkbox" value="" id="category1">
-                      <label class="form-check-label" for="category1">Category 1</label>
-                    </li>
-                    <li class="list-group-item">
-                      <input class="form-check-input me-1" type="checkbox" value="" id="category2">
-                      <label class="form-check-label" for="category2">Category 2</label>
-                    </li>
-                    <li class="list-group-item">
-                      <input class="form-check-input me-1" type="checkbox" value="" id="category3">
-                      <label class="form-check-label" for="category3">Category 3</label>
-                    </li>
-                  </ul>
-                </div>
-                <!-- category filter end  -->
-                <!-- price range start -->
-                <div class="card my-3">
-                  <div class="card-header">
-                    Price Range
-                  </div>
-                  <div class="card-body">
-                    <div class="form-group mb-3">
-                      <label for="minPrice" class="form-label">Min Price</label>
-                      <input type="number" class="form-control" id="minPrice" placeholder="0">
-                    </div>
-                    <div class="form-group">
-                      <label for="maxPrice" class="form-label">Max Price</label>
-                      <input type="number" class="form-control" id="maxPrice" placeholder="1000">
-                    </div>
-                  </div>
-                </div>
-                <!-- price range end -->
-                <!-- brand filter start -->
-                <div class="card my-3">
-                  <div class="card-header">
-                    Brands
-                  </div>
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                      <input class="form-check-input me-1" type="checkbox" value="" id="brand1">
-                      <label class="form-check-label" for="brand1">Brand 1</label>
-                    </li>
-                    <li class="list-group-item">
-                      <input class="form-check-input me-1" type="checkbox" value="" id="brand2">
-                      <label class="form-check-label" for="brand2">Brand 2</label>
-                    </li>
-                    <li class="list-group-item">
-                      <input class="form-check-input me-1" type="checkbox" value="" id="brand3">
-                      <label class="form-check-label" for="brand3">Brand 3</label>
-                    </li>
-                  </ul>
-                </div>
-                <!-- brand filter end -->
+        <div class="col-md-3 mb-3">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62385.75381987324!2d79.06925269999999!3d12.2408568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bacc0852cd3d6cd%3A0x74002b16e5bac856!2sTiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1716285438379!5m2!1sen!2sin"
+            width="256.5px" height="135px" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <!-- category filter start  -->
+          <div class="card my-3">
+            <div class="card-header">
+              Categories
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" id="category1">
+                <label class="form-check-label" for="category1">Category 1</label>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" id="category2">
+                <label class="form-check-label" for="category2">Category 2</label>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" id="category3">
+                <label class="form-check-label" for="category3">Category 3</label>
+              </li>
+            </ul>
           </div>
-          <!--left   filter section end -->
-          <!-- right side card section start  -->
-          <div class="col-md-9 mb-4">
-            <h5>Showing properties in tiruvannamalai</h5>
-            <div class="card mb-3 col-md-9" style="max-width: 540px;">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                  </div>
-                </div>
+          <!-- category filter end  -->
+          <!-- price range start -->
+          <div class="card my-3">
+            <div class="card-header">
+              Price Range
+            </div>
+            <div class="card-body">
+              <div class="form-group mb-3">
+                <label for="minPrice" class="form-label">Min Price</label>
+                <input type="number" class="form-control" id="minPrice" placeholder="0">
+              </div>
+              <div class="form-group">
+                <label for="maxPrice" class="form-label">Max Price</label>
+                <input type="number" class="form-control" id="maxPrice" placeholder="1000">
               </div>
             </div>
-            <div class="card mb-3" style="max-width: 540px;">
+          </div>
+          <!-- price range end -->
+          <!-- brand filter start -->
+          <div class="card my-3">
+            <div class="card-header">
+              Brands
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" id="brand1">
+                <label class="form-check-label" for="brand1">Brand 1</label>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" id="brand2">
+                <label class="form-check-label" for="brand2">Brand 2</label>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input me-1" type="checkbox" value="" id="brand3">
+                <label class="form-check-label" for="brand3">Brand 3</label>
+              </li>
+            </ul>
+          </div>
+          <!-- brand filter end -->
+        </div>
+        <!--left   filter section end -->
+        <!-- right side card section start  -->
+        <div class="col-md-9 mb-4">
+          <h5>Showing properties in tiruvannamalai</h5>
+          <div class="col-lg-12">
+            <div class="card mb-3">
               <div class="row g-0">
                 <div class="col-md-4">
-                  <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="...">
+                  <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="Ramana Towers">
                 </div>
                 <div class="col-md-8">
                   <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">Ramana Towers</h5>
+                    <p>Opp to Ramana ashram <br>1.5 km drive to Arunachaleswara Temple</p>
+                    <p>24-room service</p>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <!-- right side card section end -->
+          <div class="col-lg-12">
+            <div class="card mb-3">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="Ramana Towers">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5>Ramana Towers</h5>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+        <!-- right side card section end -->
       </div>
     </div>
     <!-- details content end -->
@@ -213,53 +217,58 @@
   <!-- footer section start  -->
   <footer class="footer pt-4">
     <div class="container">
-          <div class="row">
-            <div class="col-md">
-              <h6><b>Help</b></h6>
-              <ul class="list-unstyled">
-                  <li><a href="#" class="text-white textdec small-link">FAQ</a></li>
-                  <li><a href="#" class="text-white textdec small-link">Privacy policy</a></li>
-                  <li><a href="#" class="text-white textdec small-link">Cookies privacy</a></li>
-                  <li><a href="#" class="text-white textdec small-link">Terms of use</a></li>
-                  <li><a href="#" class="text-white textdec small-link">Help centre</a></li>
-              </ul>
-          </div>
-            <div class="col-md">
-                <h6><b>Get the App</b></h6>
-                <ul class="list-unstyled">
-                    <li><a href="#" class="text-white textdec small-link">IOS app</a></li>
-                    <li><a href="#" class="text-white textdec small-link">Android app</a></li>
-                </ul>
-            </div>
-            <div class="col-md">
-                <h6><b>Company</b></h6>
-                <ul class="list-unstyled">
-                    <li><a href="#" class="text-white textdec small-link">About Us</a></li>
-                    <li><a href="#" class="text-white textdec small-link">Blog</a></li>
-                    <li><a href="#" class="text-white textdec small-link">Careers</a></li>
-                    <li><a href="#" class="text-white textdec small-link">PointMAX</a></li>
-                </ul>
-            </div>
-            <div class="col-md">
-                <h6><b>Destination</b></h6>
-                <ul class="list-unstyled">
-                    <li><a href="#" class="text-white textdec small-link">Cities</a></li>
-                    <li><a href="#" class="text-white textdec small-link">Spiritual places </a></li>
-                    <li><a href="#" class="text-white textdec small-link">Hill Stations</a></li>
-                    <li><a href="#" class="text-white textdec small-link">Solo Travel places</a></li>
-                </ul>
-            </div>
-            <div class="col-md">
-                <h6><b>Social Networks</b></h6>
-                <ul class="list-unstyled d-flex p-2">
-                    <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 406.png" alt="Facebook" class="rounded-pill"></a></li>
-                    <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 407.png" alt="Twitter" class="rounded-pill"></a></li>
-                    <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 408.png" alt="Instagram" class="rounded-pill"></a></li>
-                    <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 410.png" alt="Instagram" class="rounded-pill"></a></li>
-                    <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 409.png" alt="Instagram" class="rounded-pill"></a></li>
-                </ul>
-            </div>
+      <div class="row">
+        <div class="col-md">
+          <h6><b>Help</b></h6>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white textdec small-link">FAQ</a></li>
+            <li><a href="#" class="text-white textdec small-link">Privacy policy</a></li>
+            <li><a href="#" class="text-white textdec small-link">Cookies privacy</a></li>
+            <li><a href="#" class="text-white textdec small-link">Terms of use</a></li>
+            <li><a href="#" class="text-white textdec small-link">Help centre</a></li>
+          </ul>
         </div>
+        <div class="col-md">
+          <h6><b>Get the App</b></h6>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white textdec small-link">IOS app</a></li>
+            <li><a href="#" class="text-white textdec small-link">Android app</a></li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <h6><b>Company</b></h6>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white textdec small-link">About Us</a></li>
+            <li><a href="#" class="text-white textdec small-link">Blog</a></li>
+            <li><a href="#" class="text-white textdec small-link">Careers</a></li>
+            <li><a href="#" class="text-white textdec small-link">PointMAX</a></li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <h6><b>Destination</b></h6>
+          <ul class="list-unstyled">
+            <li><a href="#" class="text-white textdec small-link">Cities</a></li>
+            <li><a href="#" class="text-white textdec small-link">Spiritual places </a></li>
+            <li><a href="#" class="text-white textdec small-link">Hill Stations</a></li>
+            <li><a href="#" class="text-white textdec small-link">Solo Travel places</a></li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <h6><b>Social Networks</b></h6>
+          <ul class="list-unstyled d-flex p-2">
+            <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 406.png" alt="Facebook"
+                  class="rounded-pill"></a></li>
+            <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 407.png" alt="Twitter"
+                  class="rounded-pill"></a></li>
+            <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 408.png" alt="Instagram"
+                  class="rounded-pill"></a></li>
+            <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 410.png" alt="Instagram"
+                  class="rounded-pill"></a></li>
+            <li><a href="#"><img src="../assets/img/footer social meadia icons/Frame 409.png" alt="Instagram"
+                  class="rounded-pill"></a></li>
+          </ul>
+        </div>
+      </div>
     </div>
     <div class="horizantal-line">
 
