--- a/details-page/details.html
+++ b/details-page/details.html
@@ -77,7 +77,17 @@
             </li>
             <li class="nav-item  p-3">
               <button type="button" class="btn text-light rounded-pill ">
-                <i class="fa-solid fa-blog p-2"></i> Airport Taxis
+                <i class="fa-solid fa-blog p-2"></i> Blogs
+              </button>
+            </li>
+            <li class="nav-item  p-3">
+              <button type="button" class="btn text-light rounded-pill ">
+                <i class="fa-solid fa-blog p-2"></i> View Cart
+              </button>
+            </li>
+            <li class="nav-item  p-3">
+              <button type="button" class="btn text-light rounded-pill ">
+                <i class="fa-solid fa-blog p-2"></i> About Us
               </button>
             </li>
           </ul>
@@ -105,114 +115,129 @@
     <!-- details content start -->
     <div class="container mt-3">
       <div class="row">
-        <!-- left filter section start  -->
-        <div class="col-md-3 mb-3">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62385.75381987324!2d79.06925269999999!3d12.2408568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bacc0852cd3d6cd%3A0x74002b16e5bac856!2sTiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1716285438379!5m2!1sen!2sin"
-            width="256.5px" height="135px" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
-          <!-- category filter start  -->
-          <div class="card my-3">
-            <div class="card-header">
-              Categories
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" id="category1">
-                <label class="form-check-label" for="category1">Category 1</label>
-              </li>
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" id="category2">
-                <label class="form-check-label" for="category2">Category 2</label>
-              </li>
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" id="category3">
-                <label class="form-check-label" for="category3">Category 3</label>
-              </li>
-            </ul>
+          <!-- Toggle button for mobile view -->
+          <div class="col-md-3 mb-3">
+              <button class="btn btn-primary mb-3" data-toggle="modal" data-target="#filterModal">Toggle Filters</button>
           </div>
-          <!-- category filter end  -->
-          <!-- price range start -->
-          <div class="card my-3">
-            <div class="card-header">
-              Price Range
-            </div>
-            <div class="card-body">
-              <div class="form-group mb-3">
-                <label for="minPrice" class="form-label">Min Price</label>
-                <input type="number" class="form-control" id="minPrice" placeholder="0">
-              </div>
-              <div class="form-group">
-                <label for="maxPrice" class="form-label">Max Price</label>
-                <input type="number" class="form-control" id="maxPrice" placeholder="1000">
-              </div>
-            </div>
-          </div>
-          <!-- price range end -->
-          <!-- brand filter start -->
-          <div class="card my-3">
-            <div class="card-header">
-              Brands
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" id="brand1">
-                <label class="form-check-label" for="brand1">Brand 1</label>
-              </li>
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" id="brand2">
-                <label class="form-check-label" for="brand2">Brand 2</label>
-              </li>
-              <li class="list-group-item">
-                <input class="form-check-input me-1" type="checkbox" value="" id="brand3">
-                <label class="form-check-label" for="brand3">Brand 3</label>
-              </li>
-            </ul>
-          </div>
-          <!-- brand filter end -->
-        </div>
-        <!--left   filter section end -->
-        <!-- right side card section start  -->
-        <div class="col-md-9 mb-4">
-          <h5>Showing properties in tiruvannamalai</h5>
-          <div class="col-lg-12">
-            <div class="card mb-3">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="Ramana Towers">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-title">Ramana Towers</h5>
-                    <p>Opp to Ramana ashram <br>1.5 km drive to Arunachaleswara Temple</p>
-                    <p>24-room service</p>
+          <!-- right side card section start  -->
+          <div class="col-md-9 mb-4">
+              <h5>Showing properties in Tiruvannamalai</h5>
+              <div class="col-lg-12">
+                  <div class="card mb-3">
+                      <div class="row g-0">
+                          <div class="col-md-4">
+                              <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="Ramana Towers">
+                          </div>
+                          <div class="col-md-8">
+                              <div class="card-body">
+                                  <h5 class="card-title">Ramana Towers</h5>
+                                  <p>Opp to Ramana ashram <br>1.5 km drive to Arunachaleswara Temple</p>
+                                  <p>24-room service</p>
+                              </div>
+                          </div>
+                      </div>
                   </div>
-                </div>
               </div>
-            </div>
-          </div>
-          <div class="col-lg-12">
-            <div class="card mb-3">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="Ramana Towers">
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5>Ramana Towers</h5>
-
+              <div class="col-lg-12">
+                  <div class="card mb-3">
+                      <div class="row g-0">
+                          <div class="col-md-4">
+                              <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="Ramana Towers">
+                          </div>
+                          <div class="col-md-8">
+                              <div class="card-body">
+                                  <h5>Ramana Towers</h5>
+                              </div>
+                          </div>
+                      </div>
                   </div>
-                </div>
               </div>
-            </div>
           </div>
-
-
-        </div>
-        <!-- right side card section end -->
+          <!-- right side card section end -->
       </div>
-    </div>
-    <!-- details content end -->
+  </div>
+  
+  <!-- Modal -->
+  <div class="modal fade" id="filterModal" tabindex="-1" aria-labelledby="filterModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="filterModalLabel">Filters</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <!-- left filter section start  -->
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62385.75381987324!2d79.06925269999999!3d12.2408568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bacc0852cd3d6cd%3A0x74002b16e5bac856!2sTiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1716285438379!5m2!1sen!2sin"
+                      width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <!-- category filter start  -->
+                  <div class="card my-3">
+                      <div class="card-header">
+                          Categories
+                      </div>
+                      <ul class="list-group list-group-flush">
+                          <li class="list-group-item">
+                              <input class="form-check-input me-1" type="checkbox" value="" id="category1">
+                              <label class="form-check-label" for="category1">Category 1</label>
+                          </li>
+                          <li class="list-group-item">
+                              <input class="form-check-input me-1" type="checkbox" value="" id="category2">
+                              <label class="form-check-label" for="category2">Category 2</label>
+                          </li>
+                          <li class="list-group-item">
+                              <input class="form-check-input me-1" type="checkbox" value="" id="category3">
+                              <label class="form-check-label" for="category3">Category 3</label>
+                          </li>
+                      </ul>
+                  </div>
+                  <!-- category filter end  -->
+                  <!-- price range start -->
+                  <div class="card my-3">
+                      <div class="card-header">
+                          Price Range
+                      </div>
+                      <div class="card-body">
+                          <div class="form-group mb-3">
+                              <label for="minPrice" class="form-label">Min Price</label>
+                              <input type="number" class="form-control" id="minPrice" placeholder="0">
+                          </div>
+                          <div class="form-group">
+                              <label for="maxPrice" class="form-label">Max Price</label>
+                              <input type="number" class="form-control" id="maxPrice" placeholder="1000">
+                          </div>
+                      </div>
+                  </div>
+                  <!-- price range end -->
+                  <!-- brand filter start -->
+                  <div class="card my-3">
+                      <div class="card-header">
+                          Brands
+                      </div>
+                      <ul class="list-group list-group-flush">
+                          <li class="list-group-item">
+                              <input class="form-check-input me-1" type="checkbox" value="" id="brand1">
+                              <label class="form-check-label" for="brand1">Brand 1</label>
+                          </li>
+                          <li class="list-group-item">
+                              <input class="form-check-input me-1" type="checkbox" value="" id="brand2">
+                              <label class="form-check-label" for="brand2">Brand 2</label>
+                          </li>
+                          <li class="list-group-item">
+                              <input class="form-check-input me-1" type="checkbox" value="" id="brand3">
+                              <label class="form-check-label" for="brand3">Brand 3</label>
+                          </li>
+                      </ul>
+                  </div>
+                  <!-- brand filter end -->
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Apply Filters</button>
+              </div>
+          </div>
+      </div>
+  
   </main>
   <!-- footer section start  -->
   <footer class="footer pt-4">
@@ -277,6 +302,9 @@
   </footer>
   <!-- footer section end  -->
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
