--- a/details-page/details.html
+++ b/details-page/details.html
@@ -123,34 +123,55 @@
           <div class="col-md-9 mb-4">
               <h5>Showing properties in Tiruvannamalai</h5>
               <div class="col-lg-12">
-                  <div class="card mb-3">
-                      <div class="row g-0">
-                          <div class="col-md-4">
-                              <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="Ramana Towers">
-                          </div>
-                          <div class="col-md-8">
-                              <div class="card-body">
-                                  <h5 class="card-title">Ramana Towers</h5>
-                                  <p>Opp to Ramana ashram <br>1.5 km drive to Arunachaleswara Temple</p>
-                                  <p>24-room service</p>
-                              </div>
-                          </div>
+                <div class="card shadow-0 border rounded-3 shadow">
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
+                        <div class="bg-image hover-zoom ripple rounded ripple-surface">
+                          <img src="./hotel images/Screenshot (3) 1.jpg"
+                            class="w-100" />
+                          <a href="#!">
+                            <div class="hover-overlay">
+                              <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
+                            </div>
+                          </a>
+                        </div>
                       </div>
-                  </div>
-              </div>
-              <div class="col-lg-12">
-                  <div class="card mb-3">
-                      <div class="row g-0">
-                          <div class="col-md-4">
-                              <img src="./hotel images/Screenshot (3) 1.jpg" class="img-fluid rounded-start" alt="Ramana Towers">
+                      <div class="col-md-6 col-lg-6 col-xl-6">
+                        <h5>Ramana Towers</h5>
+                        <div class="mt-1 mb-0 text-muted small ms-1">
+                          <div class="textright">
+                              <i class="fa-solid fa-location-dot" style="color: red;"></i>
+                              <span>Opp to Ramana ashram</span><br>
+                              <span class="ms-3">1.5 km drive to Arunachaleswara Temple</span>
                           </div>
-                          <div class="col-md-8">
-                              <div class="card-body">
-                                  <h5>Ramana Towers</h5>
-                              </div>
-                          </div>
+                        </div>
+                        <div class="mb-2 text-muted small ms-1">
+                          <i class="fa-solid fa-check" style="color: red;"></i>
+                          <span>24-room service</span>
+                        </div>
+                        <div class="d-flex flex-row align-items-center mb-1 ms-1">
+                          <span class="text-dark pe-2"><s>₹2699</s></span>
+                          <h4 class="mb-1 me-1">₹1874</h4>
+                        </div>
+                        <p style="font-size: 15px;" class="ms-1">+ ₹468 TAXES & FEES</p>
+
+                        <button data-mdb-button-init data-mdb-ripple-init class="btn text-light ms-1 btn-sm" style="width: 126px; background-color: red;" type="button">See availability</button>
+
                       </div>
+                      <div class="col-md-6 col-lg-3 col-xl-3 border-sm-start-none">
+                          <div class="d-flex justify-content-end ">
+                            <div class="align-items-end">
+                              <h4 class="text-danger mt-3 ps-4 me-2 text-end" style="font-size: 18px;">Good <br> <span class="" style="font-size: 14px; color: gray;">480 review</span></h4>
+                            </div>
+                            <div class="right rounded">
+                              <div style=" font-size:25px;"><b>5.2</b></div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
                   </div>
+                </div>
               </div>
           </div>
           <!-- right side card section end -->
